// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/List Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <ul
      class="sc-dFJtaz sc-gInthZ cokkYT bJsGfw sc-euMpEg haeOoj"
    >
      <li>
        <div
          class="sc-fKFxtB eNMjwF sc-bBXrwG caFSBy"
        >
          You can put 
          <a
            class="sc-eGCaLh hMASKi sc-ctaXho jnunmF"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKFxtB eNMjwF sc-bBXrwG caFSBy"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKFxtB eNMjwF sc-bBXrwG caFSBy"
        >
          Multiline text
          <div
            class="sc-fKFxtB eNMjwF sc-bBXrwG caFSBy"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Core/List Ordered 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <ol
      class="sc-dFJtaz sc-bsipwG cokkYT eOCauW sc-euMpEg haeOoj"
    >
      <li>
        <div
          class="sc-fKFxtB eNMjwF sc-bBXrwG caFSBy"
        >
          You can put 
          <a
            class="sc-eGCaLh hMASKi sc-ctaXho jnunmF"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKFxtB eNMjwF sc-bBXrwG caFSBy"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKFxtB eNMjwF sc-bBXrwG caFSBy"
        >
          Multiline text
          <div
            class="sc-fKFxtB eNMjwF sc-bBXrwG caFSBy"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;
